; ModuleID = '/home/carl/AnghaBench/nginx-rtmp-module/dash/extr_ngx_rtmp_mp4.c_ngx_rtmp_mp4_write_mdhd.c'
source_filename = "/home/carl/AnghaBench/nginx-rtmp-module/dash/extr_ngx_rtmp_mp4.c_ngx_rtmp_mp4_write_mdhd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c"mdhd\00", align 1
@NGX_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @ngx_rtmp_mp4_write_mdhd to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ngx_rtmp_mp4_write_mdhd(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call i32* @ngx_rtmp_mp4_start_box(i32* %4, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  store i32* %5, i32** %3, align 8
  %6 = load i32*, i32** %2, align 8
  %7 = call i32 @ngx_rtmp_mp4_field_32(i32* %6, i32 0)
  %8 = load i32*, i32** %2, align 8
  %9 = call i32 @ngx_rtmp_mp4_field_32(i32* %8, i32 0)
  %10 = load i32*, i32** %2, align 8
  %11 = call i32 @ngx_rtmp_mp4_field_32(i32* %10, i32 0)
  %12 = load i32*, i32** %2, align 8
  %13 = call i32 @ngx_rtmp_mp4_field_32(i32* %12, i32 1000)
  %14 = load i32*, i32** %2, align 8
  %15 = call i32 @ngx_rtmp_mp4_field_32(i32* %14, i32 0)
  %16 = load i32*, i32** %2, align 8
  %17 = call i32 @ngx_rtmp_mp4_field_16(i32* %16, i32 5575)
  %18 = load i32*, i32** %2, align 8
  %19 = call i32 @ngx_rtmp_mp4_field_16(i32* %18, i32 0)
  %20 = load i32*, i32** %2, align 8
  %21 = load i32*, i32** %3, align 8
  %22 = call i32 @ngx_rtmp_mp4_update_box_size(i32* %20, i32* %21)
  %23 = load i32, i32* @NGX_OK, align 4
  ret i32 %23
}

declare dso_local i32* @ngx_rtmp_mp4_start_box(i32*, i8*) #1

declare dso_local i32 @ngx_rtmp_mp4_field_32(i32*, i32) #1

declare dso_local i32 @ngx_rtmp_mp4_field_16(i32*, i32) #1

declare dso_local i32 @ngx_rtmp_mp4_update_box_size(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
